2006-05-09  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/WriteCD.py: Correctly import XmlWriter.
	* src/GrampsDb/_WriteXML.py (write_object): Check whether path is
	empty before removing leading slash.
	* src/GrampsDb/_WriteGedcom.py: Bring to new API.
	* src/plugins/ExportVCard.py: Bring to new API.
	* src/plugins/ExportVCalendar.py: Bring to new API.
	* src/plugins/WriteFtree.py: Bring to new API.
	* src/Filters/_FilterMenu.py (build_filter_menu): Return the menu.
	* src/plugins/WriteGeneWeb.py: Bring to new API.

2006-05-09  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MapView.py: add tool tips to tool buttons
	* src/ViewManager.py: add tool tips to Open button

2006-05-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (get_default_person): Use proper
	way of getting person from the handle.

2006-05-08  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: get_default_handle()
	* src/DisplayState.py: use get_default_handle, fix race condition 

2006-05-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load): Better non-TXN support.
	* src/UndoHistory.py (__init__): Rename list to tree.

	* src/DataViews/_PersonView.py (delete_person_response): Use child_ref.
	* src/plugins/Leak.py: Typo.
	* src/plugins/Eval.py: Convert to ManagedWindow.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Add callname to
	names during upgrade.
	* src/GrampsDb/_ReadXML.py (start_childref): Typo.
	* src/GrampsDb/_GrampsInMemDB.py (load): Define self.full_name
	prior to calling open_undodb().
	(GrampsInMemDB._del_*): Proper deletes.

2006-05-07  Don Allingham  <don@gramps-project.org>
	* configure.in: set for 2.1.1
	* src/GrampsDb/_ReadXML.py: call name support
	* src/GrampsDb/_WriteXML.py: call name support
	* src/DisplayState.py: include name and relationship on statusbar
	* src/DataViews/_MediaView.py: tool tips
	* src/DataViews/_RepositoryView.py: tool tips